test/e2e/fail_compile/type_errors/struct_literal_runtime_field_demotion.cst
runtime fn source() -> num { 1 }

struct Point { x: num }

fn make_point() -> Point {
    Point { x: source() }
}

fn main() {
    let _ = make_point();
}
